--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fachbibliothek – Hochschulzugang</title>
+  <title>Fachbibliothek</title>
   <link rel="stylesheet" href="style.css" />
   <script src="datenbank.js"></script>
   <script defer src="hochschule.js"></script>
